Parte del listado funcionando, faltan controladores, detalle y buscador

--- a/c0415egrupo/GestorAtributosWeb/app/atributos.component.html
+++ b/c0415egrupo/GestorAtributosWeb/app/atributos.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-    <h2>Listado de Atributos</h2>
+<div *ngIf="categorias && tipos && atributos" class="container">
+    <h2>Listado de Atributos <button><span class="glyphicon glyphicon-plus"></span></button></h2>
     <table class="table table-striped">
         <thead>
             <tr>
