--- a/c0415egrupo/GestorAtributosWeb/app/atributo-detail.component.html
+++ b/c0415egrupo/GestorAtributosWeb/app/atributo-detail.component.html
@@ -1,10 +1,10 @@
 <div *ngIf="hero">
-  <h2>{{hero.name}} details!</h2>
+  <h2>{{atributo.IdAtributo}} details!</h2>
   <div>
-    <label>id: </label>{{hero.id}}</div>
+    <label>id: </label>{{atributo.id}}</div>
   <div>
     <label>name: </label>
-    <input [(ngModel)]="hero.name" placeholder="name" />
+    <input [(ngModel)]="atributo.nombre" placeholder="name" />
    </div>
   <button (click)="goBack()">Back</button>
   <button (click)="save()">Save</button>
