cambios para poder actualizar

--- a/c0415egrupo/GestorAtributosWeb/app/atributos.component.html
+++ b/c0415egrupo/GestorAtributosWeb/app/atributos.component.html
@@ -20,7 +20,7 @@
                     <button (click)="gotoDetail(atributo)">
                         <span class="glyphicon glyphicon-eye-open"></span>
                     </button>
-                    <button (click)="gotoDetail(atributo)">
+                    <button (click)="gotoDetail(atributo.id)">
                         <span class="glyphicon glyphicon-pencil"></span>
                     </button>                
                     <button (click)="delete(atributo); $event.stopPropagation()">
