--- a/c0415egrupo/GestorAtributosWeb/app/atributo-detail.component.html
+++ b/c0415egrupo/GestorAtributosWeb/app/atributo-detail.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="atributo && tipos && categorias">
-  <h2>{{atributo.id}} details!</h2>
+  <h2>{{atributo.codigo}} detalle!</h2>
     <div>
         <label>C&oacute;digo: </label>
         <input [(ngModel)]="atributo.codigo" placeholder="name" />
@@ -24,12 +24,11 @@
             </option>
         </select>
     </div>
-  <button (click)="goBack()">Back</button>
-  <button (click)="save()">Save</button>
+  <button (click)="goBack()">Atras</button>
+  <button (click)="save()">Guardar</button>
 </div>
 
-
-<!-- 
+<!--
 Copyright 2016 Google Inc. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
 can be found in the LICENSE file at http://angular.io/license
