--- a/c0415egrupo/GestorAtributosWeb/app/atributos.component.html
+++ b/c0415egrupo/GestorAtributosWeb/app/atributos.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="categorias && tipos && atributos" class="container">
+<div *ngIf="!modalBorrar && categorias && tipos && atributos" class="container">
     <h2>Listado de Atributos </h2><button (click)="gotoCreate()"><span class="glyphicon glyphicon-plus"></span></button>
     <table class="table table-striped">
         <thead>
@@ -23,11 +23,25 @@
                     <button (click)="gotoModify(atributo)">
                         <span class="glyphicon glyphicon-pencil"></span>
                     </button>                
-                    <button (click)="delete(atributo); $event.stopPropagation()">
+                    <button (click)="showBorrarModal(atributo); $event.stopPropagation()">
                         <span class="glyphicon glyphicon-trash"></span>
                     </button>
                 </td>
             </tr>
         </tbody>
     </table>
+</div>
+
+<div *ngIf="!(!modalBorrar && categorias && tipos && atributos)" style="position: fixed; margin-top: 40vh; margin-left: 40vw; width: 350px; height: 190px; top: 0; left: 0; display:block;">
+    <h3>Cargando datos...</h3>
+</div>
+
+<div *ngIf="modalBorrar" style="position: fixed; padding:10px; margin-top: 20vh; margin-left: 35vw; width: 350px; height: 190px; top: 0; left: 0; font-family:Verdana, Arial, Helvetica, sans-serif; font-size: 12px; font-weight: normal; border: #333333 3px solid; background-color: #FAFAFA; color: #000000; display:block;">
+    <h3>&iquest;Est&aacute; seguro de que desea eliminar el atributo {{atributoBorrar.codigo}}?</h3>
+    <button (click)="delete()" style="margin-left: 20px">
+        Aceptar
+    </button>
+    <button (click)="cancelModal()">
+        Cancelar
+    </button>
 </div>
