--- a/c0415egrupo/GestorAtributosWeb/app/atributos.component.html
+++ b/c0415egrupo/GestorAtributosWeb/app/atributos.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="!modalBorrar && categorias && tipos && atributos" class="container">
-    <h2>Listado de Atributos </h2><button (click)="gotoCreate()"><span class="glyphicon glyphicon-plus"></span></button>
+    <h2>Listado de Atributos </h2><button (click)="gotoCreate()"><span class="glyphicon glyphicon-plus"></span></button><atributo-search></atributo-search>
     <table class="table table-striped">
         <thead>
             <tr>
@@ -31,7 +31,6 @@
         </tbody>
     </table>
 </div>
-
 <div *ngIf="!(!modalBorrar && categorias && tipos && atributos)" style="position: fixed; margin-top: 40vh; margin-left: 40vw; width: 350px; height: 190px; top: 0; left: 0; display:block;">
     <h3>Cargando datos...</h3>
 </div>
