Corregido buscador y añadido filtrado de la lista en tiempo real por codigo de atributo

--- a/c0415egrupo/GestorAtributosWeb/app/atributos.component.html
+++ b/c0415egrupo/GestorAtributosWeb/app/atributos.component.html
@@ -5,6 +5,10 @@
     </div>
     <div class="row">
         <atributo-search class="col-lg-5"></atributo-search>
+        <div class="col-lg-5">
+            <h4>Filtrar Lista</h4>
+            <input #filterBox id="filter-box" (keyup)="filtrar(filterBox.value)" />
+        </div>
     </div>
     <table class="table table-striped">
         <thead>
