--- a/c0415egrupo/GestorAtributosWeb/app/categorias.component.html
+++ b/c0415egrupo/GestorAtributosWeb/app/categorias.component.html
@@ -1,29 +1,45 @@
 <div *ngIf="categorias" class="container">
-    <h2>Listado de Categorias <button><span class="glyphicon glyphicon-plus"></span></button></h2>
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Nombre</th>
-                <th>Acciones</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let categoria of categorias" (click)="onSelect(categoria)">
-                <td>{{categoria.id}}</td>
-                <td>{{categoria.nombre}}</td>
-                <td>
-                    <button (click)="gotoDetail(categoria)">
-                        <span class="glyphicon glyphicon-eye-open"></span>
-                    </button>
-                    <button (click)="gotoDetail(categoria)">
-                        <span class="glyphicon glyphicon-pencil"></span>
-                    </button>                
-                    <button (click)="delete(categoria); $event.stopPropagation()">
-                        <span class="glyphicon glyphicon-trash"></span>
-                    </button>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="row">
+        <h2>Listado de Categorias</h2>
+        <button class="col-lg-1" (click)="gotoCreate()"><span class="glyphicon glyphicon-plus"></span></button>
+    </div>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Nombre</th>
+                    <th>Acciones</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let categoria of categorias" (click)="onSelect(categoria)">
+                    <td>{{categoria.id}}</td>
+                    <td>{{categoria.nombre}}</td>
+                    <td>
+                        <button (click)="gotoDetail(categoria)">
+                            <span class="glyphicon glyphicon-eye-open"></span>
+                        </button>
+                        <button (click)="gotoModify(categoria)">
+                            <span class="glyphicon glyphicon-pencil"></span>
+                        </button>
+                        <button (click)="showBorrarModal(categoria); $event.stopPropagation()">
+                            <span class="glyphicon glyphicon-trash"></span>
+                        </button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+<div *ngIf="!(!modalBorrar && categorias)" style="position: fixed; margin-top: 40vh; margin-left: 40vw; width: 350px; height: 190px; top: 0; left: 0; display:block;">
+    <h3>Cargando datos...</h3>
+</div>
+
+<div *ngIf="modalBorrar" style="position: fixed; padding:10px; margin-top: 20vh; margin-left: 35vw; width: 350px; height: 190px; top: 0; left: 0; font-family:Verdana, Arial, Helvetica, sans-serif; font-size: 12px; font-weight: normal; border: #333333 3px solid; background-color: #FAFAFA; color: #000000; display:block;">
+    <h3>&iquest;Est&aacute; seguro de que desea eliminar la categoria {{categoriaBorrar.nombre}}?</h3>
+    <button (click)="delete()" style="margin-left: 20px">
+        Aceptar
+    </button>
+    <button (click)="cancelModal()">
+        Cancelar
+    </button>
 </div>
