--- a/c0415egrupo/GestorAtributosWeb/app/categoria-detail.component.html
+++ b/c0415egrupo/GestorAtributosWeb/app/categoria-detail.component.html
@@ -1,15 +1,16 @@
 <div *ngIf="categoria">
-  <h2>{{categoria.nombre}} detalle!</h2>
+  <h2 *ngIf="categoria">Detalle de la categoria {{categoria.nombre}}</h2>
+    <h2 *ngIf="!(categoria)">Nuevo categoria</h2>
   <div>
     <label>id: </label>{{categoria.id}}</div>
   <div>
     <label>Nombre: </label>
-    <input [(ngModel)]="categoria.nombre" placeholder="Nombre" />
+    <input [(ngModel)]="categoria.nombre" placeholder="Nombre" [disabled]="!modificar"/>
    </div>
     <button (click)="goBack()"><span class="glyphicon glyphicon-chevron-left"></span> Atras</button>
     <button *ngIf="modificar" (click)="save()"><span class="glyphicon glyphicon-floppy-disk"></span> Guardar</button>
 </div>
-<div *ngIf="!(!modalBorrar && !faltanDatos)" style="position: fixed; margin-top: 40vh; margin-left: 40vw; width: 350px; height: 190px; top: 0; left: 0; display:block;">
+<div *ngIf="!(categoria)" style="position: fixed; margin-top: 40vh; margin-left: 40vw; width: 350px; height: 190px; top: 0; left: 0; display:block;">
     <h3>Cargando datos...</h3>
 </div>
 
