--- a/c0415egrupo/GestorAtributosWeb/app/atributos.component.html
+++ b/c0415egrupo/GestorAtributosWeb/app/atributos.component.html
@@ -41,7 +41,7 @@
         </tbody>
     </table>
 </div>
-<div *ngIf="!(!modalBorrar && categorias && tipos && atributos)" style="position: fixed; margin-top: 40vh; margin-left: 40vw; width: 350px; height: 190px; top: 0; left: 0; display:block;">
+<div *ngIf="!(modalBorrar || (categorias && tipos && atributos))" style="position: fixed; margin-top: 40vh; margin-left: 40vw; width: 350px; height: 190px; top: 0; left: 0; display:block;">
     <h3>Cargando datos...</h3>
 </div>
 
