--- a/c0415egrupo/GestorAtributosWeb/app/atributo-detail.component.html
+++ b/c0415egrupo/GestorAtributosWeb/app/atributo-detail.component.html
@@ -36,7 +36,7 @@
   <button *ngIf="modificar && !modoCrear" (click)="showBorrarModal(atributo)"><span class="glyphicon glyphicon-floppy-disk"></span> Borrar</button>
 </div>
 
-<div *ngIf="!(!modalBorrar && !faltanDatos && tipos && categorias)" style="position: fixed; margin-top: 40vh; margin-left: 40vw; width: 350px; height: 190px; top: 0; left: 0; display:block;">
+<div *ngIf="!((!modalBorrar || !faltanDatos) && tipos && categorias)" style="position: fixed; margin-top: 40vh; margin-left: 40vw; width: 350px; height: 190px; top: 0; left: 0; display:block;">
     <h3>Cargando datos...</h3>
 </div>
 
