--- a/c0415egrupo/GestorAtributosWeb/app/categorias.component.html
+++ b/c0415egrupo/GestorAtributosWeb/app/categorias.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="categorias" class="container">
+<div *ngIf="categorias && !modalBorrar && !modalErrorBorrar" class="container">
     <div class="row">
         <h2>Listado de Categorias</h2>
         <button class="col-lg-1" (click)="gotoCreate()"><span class="glyphicon glyphicon-plus"></span></button>
@@ -30,7 +30,7 @@
             </tbody>
         </table>
     </div>
-<div *ngIf="!(categorias)" style="position: fixed; margin-top: 40vh; margin-left: 40vw; width: 350px; height: 190px; top: 0; left: 0; display:block;">
+<div *ngIf="!categorias && !modalBorrar && !modalErrorBorrar" style="position: fixed; margin-top: 40vh; margin-left: 40vw; width: 350px; height: 190px; top: 0; left: 0; display:block;">
     <h3>Cargando datos...</h3>
 </div>
 
