Creado test de modificar con error de faltan datos

--- a/c0415egrupo/GestorAtributosWeb/app/categoria-detail.component.html
+++ b/c0415egrupo/GestorAtributosWeb/app/categoria-detail.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="categoria">
+<div *ngIf="categoria && !modalBorrar && !faltanDatos">
   <h2 *ngIf="modoCrear==false">Detalle de la categoria {{categoria.nombre}}</h2>
     <h2 *ngIf="modoCrear">Nuevo categoria</h2>
   <div>
