Corrección del icono de borrado y de tildes

--- a/c0415egrupo/GestorAtributosWeb/app/categoria-detail.component.html
+++ b/c0415egrupo/GestorAtributosWeb/app/categoria-detail.component.html
@@ -22,7 +22,7 @@
 </div>
 
 <div *ngIf="modalBorrar" style="position: fixed; padding:10px; margin-top: 20vh; margin-left: 35vw; width: 350px; height: 190px; top: 0; left: 0; font-family:Verdana, Arial, Helvetica, sans-serif; font-size: 12px; font-weight: normal; border: #333333 3px solid; background-color: #FAFAFA; color: #000000; display:block;">
-    <h3>&iquest;Est&aacute; seguro de que desea eliminar la categoria {{categoria.nombre}}?</h3>
+    <h3>&iquest;Est&aacute; seguro de que desea eliminar la categor&iacute;a {{categoria.nombre}}?</h3>
     <button (click)="delete()" style="margin-left: 20px">
         Aceptar
     </button>
