--- a/c0415egrupo/GestorAtributosWeb/app/atributo-detail.component.html
+++ b/c0415egrupo/GestorAtributosWeb/app/atributo-detail.component.html
@@ -33,7 +33,7 @@
   <button *ngIf="!modificar && !modoCrear" (click)="modoModificar()"><span class="glyphicon glyphicon-pencil"></span></button>
   <button *ngIf="modificar && !modoCrear" (click)="modoVisualizar()"><span class="glyphicon glyphicon-eye-open"></span></button>
   <button *ngIf="modificar" (click)="save()"><span class="glyphicon glyphicon-floppy-disk"></span> Guardar</button>
-  <button *ngIf="modificar && !modoCrear" (click)="showBorrarModal(atributo)"><span class="glyphicon glyphicon-floppy-disk"></span> Borrar</button>
+  <button *ngIf="modificar && !modoCrear" (click)="showBorrarModal(atributo)"><span class="glyphicon glyphicon-trash"></span> Borrar</button>
 </div>
 
 <div *ngIf="!((!modalBorrar || !faltanDatos) && tipos && categorias)" style="position: fixed; margin-top: 40vh; margin-left: 40vw; width: 350px; height: 190px; top: 0; left: 0; display:block;">
