Añadidos más atributos al inicio de la aplicación, modificados algunos errores de tipografía

--- a/c0415egrupo/GestorAtributosWeb/app/atributo-detail.component.html
+++ b/c0415egrupo/GestorAtributosWeb/app/atributo-detail.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="row">
         <label>Descripci&oacute;n: </label>
-        <input [(ngModel)]="atributo.descripcion" placeholder="descripci&oacute;n" [disabled]="!modificar" />
+        <input [(ngModel)]="atributo.descripcion" placeholder="Descripci&oacute;n" [disabled]="!modificar" />
     </div>
     <div class="row">
         <label>Tipo: </label>
