--- a/c0415egrupo/GestorAtributosWeb/app/atributo-search.component.html
+++ b/c0415egrupo/GestorAtributosWeb/app/atributo-search.component.html
@@ -1,5 +1,5 @@
 <div id="search-component">
-    <h4>Atributo Buscador</h4>
+    <h4>Buscador de Atributos</h4>
     <input #searchBox id="search-box" (keyup)="search(searchBox.value)" />
     <div>
         <div *ngFor="let atributo of atributos | async"
